# checkdigit-algorithms-python

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: workflow-develop.yml  workflow.yml
tests/checkdigit/: test_damm.py  test_luhn.py  test_verhoeff.py
